@@ -7,10 +7,22 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
+    id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.21'
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+// Add this to your build.gradle file (project-level or module-level)
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED']
+}
+
+// If you're using Kotlin and kapt, also add this:
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "11" // or your target JVM version
+        freeCompilerArgs += ['-Xadd-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED']
+    }
 }
